# edit-distance

./: .ghci  .gitattributes  .gitignore  README  README.textile  TODO  edit-distance.cabal  import_wiki.lhs  release
Text/: EditDistance.hs
Text/EditDistance/: ArrayUtilities.hs  Benchmark.hs  Bits.hs  EditCosts.hs  MonadUtilities.hs  STUArray.hs  SquareSTUArray.hs  Tests.hs
Text/EditDistance/Tests/: EditOperationOntology.hs  Framework.hs  Properties.hs
