Name:           edit-distance
Version:        0.1
Cabal-Version:  >= 1.2
Category:       Algorithms
Description:    Edit distances for fuzzy matching, including Levenhstein and Damerau-Levenshtein algorithms.
License:        BSD3
License-File:   LICENSE
Author:         Max Bolingbroke
Maintainer:     batterseapower@hotmail.com
Build-Type:     Simple

Flag Tests
        Description:    Enable building the tests and benchmark suite
        Default:        False

Library
        Exposed-Modules:        Text.EditDistance
        Other-Modules:          Text.EditDistance.EditCosts
                                Text.EditDistance.SquareSTUArray
                                Text.EditDistance.STUArray
                                Text.EditDistance.Bits
        Build-Depends:          base, array >= 0.1, random >= 1.0, containers >= 0.1.0.1
        Ghc-Options:            -O2 -fvia-C -Wall -fno-warn-orphans

Executable edit-distance-tests
        Main-Is:                Text/EditDistance/Tests.hs
        Build-Depends:          base, array >= 0.1, random >= 1.0, QuickCheck >= 1.1
        Extensions:             PatternGuards, PatternSignatures, 
                                RankNTypes, ExistentialQuantification,
                                ScopedTypeVariables
        Ghc-Options:            -O2 -fvia-C -Wall -fno-warn-orphans
        
        if !flag(tests)
                Buildable:      False

Executable edit-distance-benchmark
        Main-Is:                Text/EditDistance/Benchmark.hs
        Build-Depends:          base, array >= 0.1, random >= 1.0, old-time >= 1.0,
                                parallel >= 1.0, process >= 1.0, unix >= 2.3
        Ghc-Options:            -O2 -fvia-C -Wall -fno-warn-orphans -threaded
        
        if !flag(tests)
                Buildable:      False